<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:layout_gravity="left"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_marginBottom="40dp">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/logo"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn03_shapes"
                android:maxLines="1"
                android:hint="@string/hint_tel"
                android:inputType="textPhonetic"
                android:padding="10dp"
                android:textSize="16sp"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_hint" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn03_shapes"
                android:maxLines="1"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/input_login"
                android:textSize="18sp"
                android:textColorHint="@color/input_hint" />

            <!-- Login Button -->

            <Button

                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn02_shapes"
                android:padding="10dp"
                android:text="@string/btn_signin"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <Button
                android:id="@+id/btnLinkToRegisterScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:text="@string/btn_link_to_signup"
                android:textAllCaps="false"
                android:textColor="@color/RED"
                android:textSize="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:text="|"
                android:textColor="@color/RePassward"
                android:textSize="16dp" />

            <Button
                android:id="@+id/RePassward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:text="@string/Repassword"
                android:textAllCaps="false"
                android:textColor="@color/RePassward"
                android:textSize="16dp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>

